--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>"]
 description = "A pure rust implementation of lzo converted from Linux's C implementation using corrode"
 license = "GPL-2.0"
+repository = "https://github.com/jrmuizel/rust-lzo"
 
 [dependencies]
 libc = "0.2.21"
